--- a/SpringMvcUser/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMvcUser/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,9 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
 version="3.0">
     <display-name>Archetype Created Web Application</display-name>
-    <!-- <welcome-file-list>
+    <welcome-file-list>
         <welcome-file>home.jsp</welcome-file>
-    </welcome-file-list> -->
+    </welcome-file-list>
     <servlet>
         <servlet-name>spring-mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
